--- a/wpg/formats/colors.yml
+++ b/wpg/formats/colors.yml
@@ -1,24 +1,24 @@
-wallpaper: "up14.jpg"
+wallpaper: "up2.png"
 
 special:
-    background: "#0a0c0f"
-    foreground: "#ffd8bb"
-    cursor: "#ffd8bb"
+    background: "#0d1216"
+    foreground: "#e9eef6"
+    cursor: "#e9eef6"
 
 colors:
-    color0: "#0a0c0f"
-    color1: "#A93526"
-    color2: "#4E4641"
-    color3: "#A84C2E"
-    color4: "#2A3944"
-    color5: "#605157"
-    color6: "#8F362A"
-    color7: "#e6a48e"
-    color8: "#191f27"
-    color9: "#e93a23"
-    color10: "#6e584b"
-    color11: "#e85b2d"
-    color12: "#2f4b5f"
-    color13: "#885d6e"
-    color14: "#c53c2a"
-    color15: "#ffd8bb"
+    color0: "#0d1216"
+    color1: "#927162"
+    color2: "#3B806D"
+    color3: "#EC9C60"
+    color4: "#6E746D"
+    color5: "#8E8878"
+    color6: "#738676"
+    color7: "#afb3b9"
+    color8: "#1b262f"
+    color9: "#cd8c6f"
+    color10: "#40b293"
+    color11: "#ffc767"
+    color12: "#84a57f"
+    color13: "#c9b88b"
+    color14: "#85be8e"
+    color15: "#e9eef6"
