--- a/wpg/formats/colors-kitty.conf
+++ b/wpg/formats/colors-kitty.conf
@@ -1,20 +1,20 @@
-foreground   #ffd8bb
-background   #0a0c0f
-cursor       #ffd8bb
+foreground   #e9eef6
+background   #0d1216
+cursor       #e9eef6
 
-color0       #0a0c0f
-color8       #191f27
-color1       #A93526
-color9       #e93a23
-color2       #4E4641
-color10      #6e584b
-color3       #A84C2E
-color11      #e85b2d
-color4       #2A3944
-color12      #2f4b5f
-color5       #605157
-color13      #885d6e
-color6       #8F362A
-color14      #c53c2a
-color7       #e6a48e
-color15      #ffd8bb
+color0       #0d1216
+color8       #1b262f
+color1       #927162
+color9       #cd8c6f
+color2       #3B806D
+color10      #40b293
+color3       #EC9C60
+color11      #ffc767
+color4       #6E746D
+color12      #84a57f
+color5       #8E8878
+color13      #c9b88b
+color6       #738676
+color14      #85be8e
+color7       #afb3b9
+color15      #e9eef6
