--- a/rofi/config
+++ b/rofi/config
@@ -4,10 +4,10 @@ rofi.width:                          50
 rofi.lines:                          8
 rofi.columns:                        3
 rofi.font:                           Input Mono 12
-rofi.color-normal:                   #0d1216, #e9eef6, #0d1216, #ffc767, #0d1216
-rofi.color-urgent:                   #0d1216, #1b262f, #afb3b9, #cd8c6f, #1b262f
-rofi.color-active:                   #0d1216, #1b262f, #afb3b9, #cd8c6f, #1b262f
-rofi.color-window:                   #0d1216, #cd8c6f, #c9b88b
+rofi.color-normal:                   #171d26, #f1f1f4, #171d26, #f0e556, #171d26
+rofi.color-urgent:                   #171d26, #26303f, #c8c8cc, #ed4628, #26303f
+rofi.color-active:                   #171d26, #26303f, #c8c8cc, #ed4628, #26303f
+rofi.color-window:                   #171d26, #ed4628, #f07b63
 rofi.bw:                             2
 rofi.location:                       2
 rofi.padding:                        10
