--- a/i3/config
+++ b/i3/config
@@ -119,12 +119,12 @@ mode $modepower {
 }
 default_border pixel 2
 set $c1 #c8c8cc
-set $c2 #f1f1f4 
+set $c2 #fcfcff 
 set $c3 #c83e2b
-set $c4 #ed4628 
-set $c5 #26303f
-set $c6 #ee4832
-set $c7 #171d26
+set $c4 #ff4428 
+set $c5 #292e3f
+set $c6 #ee4631
+set $c7 #1a1d27
 
 # class                 border  backgr. text indicator child_border
 client.focused          $c4     $c4     $c7  $c4       $c4
