--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -5,7 +5,7 @@ gtk-cursor-theme-name=xcursor-breeze
 gtk-cursor-theme-size=0
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
-gtk-font-name=Noto Sans 12
+gtk-font-name=Ubuntu Nerd Font Light 12
 gtk-icon-theme-name=flattrcolor
 gtk-menu-images=1
 gtk-theme-name=FlatColor
