--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -10,6 +10,7 @@ print_info() {
     info "DE" de
     info "WM" wm
     info "WM Theme" wm_theme
+    info "Font" font
     info "Terminal" term
     info "Terminal Font" term_font
     info "CPU" cpu
@@ -21,18 +22,12 @@ print_info() {
     # info "CPU Usage" cpu_usage
     # info "Disk" disk
     # info "Battery" battery
-    # info "Font" font
     # info "Song" song
     # info "Local IP" local_ip
     # info "Public IP" public_ip
     # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
-
-    info line_break
-    info cols
-    info line_break
 }
-
 
 # Kernel
 
