--- a/rofi/config
+++ b/rofi/config
@@ -4,10 +4,10 @@ rofi.width:                          50
 rofi.lines:                          8
 rofi.columns:                        3
 rofi.font:                           Input Mono 12
-rofi.color-normal:                   #171d26, #f1f1f4, #171d26, #f0e556, #171d26
-rofi.color-urgent:                   #171d26, #26303f, #c8c8cc, #ed4628, #26303f
-rofi.color-active:                   #171d26, #26303f, #c8c8cc, #ed4628, #26303f
-rofi.color-window:                   #171d26, #ed4628, #f07b63
+rofi.color-normal:                   #1a1d27, #fcfcff, #1a1d27, #ffe555, #1a1d27
+rofi.color-urgent:                   #1a1d27, #292e3f, #c8c8cc, #ff4428, #292e3f
+rofi.color-active:                   #1a1d27, #292e3f, #c8c8cc, #ff4428, #292e3f
+rofi.color-window:                   #1a1d27, #ff4428, #ff7a61
 rofi.bw:                             2
 rofi.location:                       2
 rofi.padding:                        10
