--- a/wpg/formats/colors-kitty.conf
+++ b/wpg/formats/colors-kitty.conf
@@ -1,20 +1,20 @@
-foreground   #f1f1f4
-background   #171d26
-cursor       #f1f1f4
+foreground   #fcfcff
+background   #1a1d27
+cursor       #fcfcff
 
-color0       #171d26
-color8       #26303f
+color0       #1a1d27
+color8       #292e3f
 color1       #c83e2b
-color9       #ed4628
+color9       #ff4428
 color2       #ac3f31
-color10      #ee4832
+color10      #ee4631
 color3       #f0ae52
-color11      #f0e556
+color11      #ffe555
 color4       #c55935
-color12      #ee6d35
+color12      #ff6b34
 color5       #cf695a
-color13      #f07b63
+color13      #ff7a61
 color6       #ee6533
-color14      #ee7b2f
+color14      #ff7a2f
 color7       #c8c8cc
-color15      #f1f1f4
+color15      #fcfcff
