Before new Setup

--- a/Code/User/settings.json
+++ b/Code/User/settings.json
@@ -1,6 +1,6 @@
 {
     "window.menuBarVisibility": "hidden",
-    "workbench.iconTheme": "file-icons",
+    "workbench.iconTheme": "material-icon-theme",
     "material-icon-theme.showWelcomeMessage": false,
     "editor.fontFamily": "Fira Code",
     "editor.fontSize": 20,
