--- a/polybar/config
+++ b/polybar/config
@@ -10,13 +10,13 @@ margin = 5
 monitor = eDP1
 offset-y = 5%
 
-background = #001a1d27
-foreground = #ffffff
+background = #001f2230
+foreground = #fff7ff
 
 line-size = 3
 
 border-size = 0
-border-color = #dd1a1d27
+border-color = #dd1f2230
 
 padding-left = 0
 padding-right = 0
@@ -46,14 +46,14 @@ cursor-scroll = ns-resize
 type = custom/script
 exec = ~/.config/polybar/updates-arch.sh
 interval = 600
-format-foreground = #fdad5d
+format-foreground = #71b0ff
 label-padding = 1
 
 [module/aur]
 type = custom/script
 exec = ~/.config/polybar/updates-arch-aur.sh
 interval = 600
-format-foreground = #fdad5d
+format-foreground = #678CD0
 label-padding = 1
 
 [module/backlight]
@@ -61,7 +61,7 @@ type = internal/xbacklight
 enable-scroll = true
 label = %percentage%
 format =  <label>
-format-foreground = #fb7da7
+format-foreground = #A490B4
 format-padding = 1
 
 [module/battery]
@@ -72,24 +72,24 @@ adapter = ADP1
 poll-interval = 5
 label-charging =  %percentage%
 label-charging-padding = 1
-format-charging-foreground = #af98e6
+format-charging-foreground = #9578A2
 label-discharging =  %percentage%
 label-discharging-padding = 1
-format-discharging-foreground = #e8d56d
+format-discharging-foreground = #DBA6B5
 label-full =  100
 label-full-padding =1
-format-full-foreground = #af98e6
+format-full-foreground = #c889e4
 
 [module/pulseaudio]
 type = internal/pulseaudio
 sink = alsa_output.pci-0000_12_00.3.analog-stereo
 use-ui-max = true
 interval = 5
-format-volume-foreground = #76c5a4
+format-volume-foreground = #beb3ff
 format-volume-padding = 1
 format-volume = <ramp-volume> <label-volume>
 format-muted-padding = 1
-format-muted-foreground = #76c5a4
+format-muted-foreground = #A19CCB
 format-muted = <label-muted>
 label-volume = %percentage%
 label-muted =  --
@@ -102,13 +102,13 @@ ramp-volume-2 = 
 type = internal/xwindow
 label = %title:0:50:...%
 label-padding = 1
-format-foreground = #e8d56d
+format-foreground = #ffbee0
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-foreground = #af98e6
+format-foreground = #9578A2
 
 label-layout =   %layout%
 label-layout-padding = 1
@@ -136,30 +136,30 @@ format-focused = <label-focused>
 label-focused = %name%
 label-focused-padding = 1
 label-focused-margin = 0
-label-focused-foreground = #ffffff
+label-focused-foreground = #fff7ff
 
 format-unfocused = <label-unfocused>
 label-unfocused = %name%
 label-unfocused-padding = 1
 label-unfocused-margin = 0
-label-unfocused-foreground = #56c9db
+label-unfocused-foreground = #6F85B6
 
 label-mode-padding = 0
 label-mode-margin = 0
-label-mode-foreground = #ffffff
+label-mode-foreground = #fff7ff
 label-mode = %mode%
 
 format-urgent = <label-urgent>
 label-urgent = %name%
 label-urgent-padding = 1
 label-urgent-margin = 0
-label-urgent-foreground = #fb7da7
+label-urgent-foreground = #A490B4
 
 format-visible = <label-visible>
 label-visible = %name%
 label-visible-padding = 1
 label-visible-margin = 0
-label-visible-foreground = #ffffff
+label-visible-foreground = #ddd1dc
 
 [module/wlan]
 type = internal/network
@@ -169,8 +169,8 @@ label-connected =  %essid% %local_ip%
 format-connected-padding = 1
 
 format-disconnected =  --
-format-connected-foreground = #56c9db
-format-disconnected-foreground = #56c9db
+format-connected-foreground = #7da5ff
+format-disconnected-foreground = #6F85B6
 format-disconnected-padding = 1
 
 [module/eth]
@@ -181,14 +181,14 @@ label-connected =  %local_ip%
 format-connected-padding = 1
 
 format-disconnected =  --
-format-connected-foreground = #e8d56d
-format-disconnected-foreground = #e8d56d
+format-connected-foreground = #ffbee0
+format-disconnected-foreground = #DBA6B5
 format-disconnected-padding = 1
 
 [module/date]
 type = internal/date
 interval = 1
-format-foreground = #ffffff
+format-foreground = #ddd1dc
 date =" %m/%d"
 date-alt = " %Y/%m/%d"
 
