--- a/wpg/formats/colors-kitty.conf
+++ b/wpg/formats/colors-kitty.conf
@@ -1,20 +1,20 @@
-foreground   #ffffff
-background   #1a1d27
-cursor       #ffffff
+foreground   #fff7ff
+background   #1f2230
+cursor       #fff7ff
 
-color0       #1a1d27
-color8       #292e3f
-color1       #fb7da7
-color9       #fb7da7
-color2       #76c5a4
-color10      #76c5a4
-color3       #e8d56d
-color11      #e8d56d
-color4       #56c9db
-color12      #56c9db
-color5       #af98e6
-color13      #af98e6
-color6       #fdad5d
-color14      #fdad5d
-color7       #ffffff
-color15      #ffffff
+color0       #1f2230
+color8       #2e3348
+color1       #A490B4
+color9       #d7a6fe
+color2       #A19CCB
+color10      #beb3ff
+color3       #DBA6B5
+color11      #ffbee0
+color4       #6F85B6
+color12      #7da5ff
+color5       #9578A2
+color13      #c889e4
+color6       #678CD0
+color14      #71b0ff
+color7       #ddd1dc
+color15      #fff7ff
