--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -8,7 +8,7 @@ gtk-enable-input-feedback-sounds=1
 gtk-font-name=Ubuntu Light 12
 gtk-icon-theme-name=flattrcolor
 gtk-menu-images=1
-gtk-theme-name=FlatColor
+gtk-theme-name=Fantome
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-xft-antialias=1
